[package]
name = "test-rust"
version = "0.1.0"
authors = ["Nicolas Bonnet <mail@nicolasbon.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.5.5"
ndarray = "^0.13.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false


