[package]
name = "grid-pathfinding"
version = "0.1.0"
authors = ["Nicolas Bonnet <mail@nicolasbon.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grid_pathfinding"
crate-type = ["cdylib", "rlib"]


[dependencies]
rand = "^0.5.5"
ndarray = "^0.13.0"
bresenham = "0.1.1"
numpy = "0.7.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]
